OpenLDAP 2.3 Change Log

OpenLDAP 2.3.13 Engineering

OpenLDAP 2.3.12 Release
	Fixed libldap ldapi:// authdn construction
	Added libldap ldap_bv2escaped_filter_value (ITS#2535)
	Added libldap/slapd TLS DSA certificate support (ITS#4017)
	Fixed libldap SASL bind issue (ITS#4158)
	Fixed ldapmodrdn empty line handling (ITS#4101)
	Fixed client tools additional info printing (ITS#4147)
	Updated slapd ldaps:// not configured fix (ITS#4082,4083)
	Fixed slapd illegal S option bug (ITS#4119)
	Fixed slapd cn=monitor log level mod issue (ITS#4091)
	Fixed slapd cn=config bad access issue (ITS#4111)
	Fixed slapd cn=config access modify issue (ITS#4127)
	Fixed slapd cn=config init issue (ITS#4128)
	Fixed slapd non-reentrant libwrap issue (ITS#4099)
	Fixed slapd thread v. tools_threads settings
	Fixed slapd spurious defer message (ITS#3850)
	Fixed slapd attribute SYNTAX OIDM issue (ITS#4116)
	Fixed slapd modify empty sequence bug (ITS#4183)
	Fixed slapd-bdb uninitialized condition in tool mode (ITS#4143)
	Fixed slapd-bdb empty suffix and syncprov issue (ITS#4171)
	Fixed slapd-hdb syncrepl deadlock issue (ITS#4088)
	Added slapd-ldap write op timeout support (ITS#4157)
	Fixed slapd-ldap/slapo-chain matched dn handling (ITS#4176)
	Fixed slapd-meta invalid DN attrs normalize/pretty issue (ITS#4107)
	Fixed slapd-meta rootdn erroneous success issue (ITS#4122)
	Fixed slapd-meta proxying bind result issue (ITS#4129)
	Fixed slapd-meta/slapo-rwm rwm-mapping issue (ITS#4086)
	Fixed slapd-meta per-target retry (ITS#4150)
	Fixed slapd-meta size/time limit handling (ITS#4145)
	Fixed slapd-sql size limit count (ITS#4181)
	Fixed slapo-ppolicy pwdFailureTIme after bind success issue (ITS#4134)
	Fixed slapo-ppolicy add passord_hash quality config dependency
	Fixed slapo-syncprov LDAP response types (ITS#4183)
	Added slapd delta syncrepl support
	Added slapadd thread support
	Updated slapcat subordinate database handling (ITS#4089)
	Added slapd/slaptest pid/arg file consistency check (ITS#4074)