@@ -1,6 +1,7 @@
 OpenLDAP 2.3 Change Log
 
 OpenLDAP 2.3.13 Engineering
+	Fixed libldap/liblutil MSG_ACCRIGHTSLEN bug (ITS#4206)
 
 OpenLDAP 2.3.12 Release
 	Fixed libldap ldapi:// authdn construction
